# dune-iga

./: .clang-format  CMakeLists.txt
.devcontainer/: devcontainer.json
.github/workflows/: debian-coverage.yml  debian.yml
cmake/modules/: AddClipperLibFlags.cmake  DuneIgaMacros.cmake
dune/iga/: nurbsbasis.hh  nurbspatchgeometry.h
dune/iga/geometrykernel/: geohelper.hh  nurbspatchgeometry.hh  nurbspatchgeometrylocalview.hh  nurbspatchtransform.hh
dune/iga/hierarchicpatch/: gridcapabilities.hh  patchgrid.hh  patchgridentity.hh  patchgridfactory.hh  patchgridgeometry.hh  patchgridintersections.hh  patchgridview.hh
dune/iga/integrationrules/: integrationruleholder.hh  simplexgenerator.hh  simplexintegrationrulegenerator.hh
dune/iga/io/: CMakeLists.txt  griddrawer.hh  ibrareader.hh
dune/iga/io/vtk/: igadatacollector.hh  vtkrefinedgeometries.hh
dune/iga/oldStuff/: nurbsbasis.hh
dune/iga/parameterspace/: CMakeLists.txt  concepts.hh  localgeometryvariant.hh
dune/iga/test/: CMakeLists.txt  concepttests.cpp  factorytest.cpp  gridtests.cpp  gridteststrimmed.cpp  testboundarysegmentidx.cpp  testibrareader.cpp  testintegrationrules.cpp  testintersections.cpp  testnotreconstructedgrid.cpp  testnurbsbasis.cpp  testnurbsbasistrimmed.cpp  testreferenceelement.hh  testunstructuredgridcreation.cpp  testutillities.cpp  testvtkdatacollector.cpp  trimtest.cpp
dune/iga/trimmer/: concepts.hh  entityvariant.hh  intersectionvariants.hh  (+1 more)
python/dune/iga/: CMakeLists.txt  __init__.py  _iga.cc  _igagrids.py  _nurbspatchdata.py
sandbox/src/: sandbox.cc
(+57 files in other folders)
